--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,16 @@ a:hover {
   color: #535bf2;
 }
 
+div[id="root"] {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
   min-height: 100vh;
 }
 
