Added react-hook-form + vitest and testing libraries

--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
@@ -59,6 +57,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+  outline-offset: 4px;
 }
 
 @media (prefers-color-scheme: light) {
